...
    "stats": "Stats"
  },
  "chart": {
    "tutorial": "You can swipe the chart to view more dates."
  },
  "symptoms": {
    "bleeding": "bleeding",
    "temperature": "temperature",
    "mucus": "cervical mucus",
    "cervix": "cervix",
    "note": "note",
    "desire": "desire",
    "sex": "sex",
...
          "text": "Define how you want to use drip"
        },
        "password": {
          "name": "Password",
          "text": "Set, edit or delete your password"
        },
        "reminders": {
          "name": "Reminders",
          "text": "Turn on/off reminders"
        },
        "info": {
          "name": "Info",
          "text": "Learn more about how drip works"
...
